better fix for extra padding on website detail page

--- a/src/media/css/detail/header.styl
+++ b/src/media/css/detail/header.styl
@@ -5,13 +5,11 @@
 @import '../lib';
 
 [data-page-type~="website"] {
-    +media--wide-tablet() {
-        .mkt-tile {
-            height: 150px;
-        }
-        .mkt-app-button {
-            margin: 0 auto;
-        }
+    .mkt-tile {
+        height: auto;
+    }
+    .mkt-app-button {
+        margin: 0 auto;
     }
 }
 
